--- a/GatewayConference/MainViewCell.xib
+++ b/GatewayConference/MainViewCell.xib
@@ -1,18 +1,62 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MainViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="256" id="KGk-i7-Jjw" customClass="MainViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="256"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yys-35-dPx">
+                        <rect key="frame" x="56" y="166" width="208" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="208" id="URq-YQ-XeJ"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="STHeitiTC-Medium" family="Heiti TC" pointSize="18"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bbb" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGf-eT-syY">
+                        <rect key="frame" x="56" y="203" width="208" height="33"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="17"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vR1-nZ-2gr">
+                        <rect key="frame" x="85" y="8" width="150" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="150" id="7W9-IK-eIi"/>
+                            <constraint firstAttribute="width" constant="150" id="SzK-Ho-zqW"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="IGf-eT-syY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="48" id="5rP-kA-d7H"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="IGf-eT-syY" secondAttribute="trailing" constant="48" id="7Wz-2U-UfK"/>
+                    <constraint firstAttribute="centerY" secondItem="IGf-eT-syY" secondAttribute="centerY" constant="-92" id="IqG-Me-AUc"/>
+                    <constraint firstItem="yys-35-dPx" firstAttribute="top" secondItem="vR1-nZ-2gr" secondAttribute="bottom" constant="8" symbolic="YES" id="RNz-Iz-vd8"/>
+                    <constraint firstItem="yys-35-dPx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="48" id="UEH-2c-yOx"/>
+                    <constraint firstItem="IGf-eT-syY" firstAttribute="top" secondItem="yys-35-dPx" secondAttribute="bottom" constant="7" id="Xvr-j5-pdg"/>
+                    <constraint firstAttribute="centerY" secondItem="yys-35-dPx" secondAttribute="centerY" constant="-53.5" id="ZZs-M5-OqW"/>
+                    <constraint firstItem="yys-35-dPx" firstAttribute="trailing" secondItem="IGf-eT-syY" secondAttribute="trailing" id="gIZ-x7-mc5"/>
+                    <constraint firstAttribute="centerX" secondItem="vR1-nZ-2gr" secondAttribute="centerX" id="kIa-E1-Tjg"/>
+                    <constraint firstAttribute="centerY" secondItem="vR1-nZ-2gr" secondAttribute="centerY" constant="45" id="mRA-AM-4P9"/>
+                    <constraint firstItem="yys-35-dPx" firstAttribute="leading" secondItem="IGf-eT-syY" secondAttribute="leading" id="y1I-eD-tyA"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="churchLbl" destination="IGf-eT-syY" id="CjE-Tc-1hd"/>
+                <outlet property="nameLbl" destination="yys-35-dPx" id="pwG-X1-pW5"/>
+                <outlet property="profilePic" destination="vR1-nZ-2gr" id="v3K-Ka-ENG"/>
+            </connections>
+            <point key="canvasLocation" x="571.5" y="300"/>
         </tableViewCell>
     </objects>
 </document>
